[gd_scene load_steps=5 format=3 uid="uid://02381nc0lj5f"]

[ext_resource type="Theme" uid="uid://c3vkkkcd77aua" path="res://scenes/main_theme.tres" id="1_q3wy6"]
[ext_resource type="Script" path="res://scenes/ui/statsUi.gd" id="2_dru51"]
[ext_resource type="Texture2D" uid="uid://c3nwqmaq043kw" path="res://art/original_art/tile_0102.png" id="2_koog2"]
[ext_resource type="Texture2D" uid="uid://cibtivciubemc" path="res://art/original_art/heart.png" id="3_yuvh0"]

[node name="StatsUi" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 16.0
grow_horizontal = 2
theme = ExtResource("1_q3wy6")
alignment = 1
script = ExtResource("2_dru51")

[node name="Block" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BlockImage" type="TextureRect" parent="Block"]
layout_mode = 2
texture = ExtResource("2_koog2")
stretch_mode = 5

[node name="BlockLabel" type="Label" parent="Block"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HealthImage" type="TextureRect" parent="Health"]
layout_mode = 2
texture = ExtResource("3_yuvh0")
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="Health"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "4"
horizontal_alignment = 1
vertical_alignment = 1
